--- a/style.css
+++ b/style.css
@@ -42,8 +42,10 @@ body {
     margin-top: 60px;
     margin-left: auto;
     margin-right: auto;
-    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
-    background-color: rgba(255, 255, 255, 0.15);
+    /* box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);  */
+    box-shadow:
+    0px 221px 49px -115px rgb(72 72 72 / 41%)  ;
+      background-color: rgba(255, 255, 255, 0.15);
     backdrop-filter: blur(8px);
 }
 
