--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(./assets/styles/fonts.css);
+@import url(../assets/styles/fonts.css);
 
 * {
     margin: 0;
@@ -25,7 +25,7 @@ html {
 body {
     font-size: 62.5%;
     background-color: var(--mainColor);
-    background-image: url('./assets/images/back3.svg');
+    background-image: url('../assets/images/back3.svg');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
