--- a/css/style.css
+++ b/css/style.css
@@ -27,15 +27,16 @@ body {
     background-color: var(--mainColor);
     background-image: url('../assets/images/back3.svg');
     background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
+    background-position: top center;
+    /* background-position-x: 0; */
+    background-size: contain;
     background-attachment: fixed;
 }
 
 /* input */
 
 .container {
-    width: 70%;
+    width: 80%;
     height: auto;
     border:1px solid #82b2c7;
     border-radius: 5px;
@@ -139,8 +140,8 @@ body {
 }
 
 .todos__controller-clear {
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
+    padding: 0.5rem 0.7rem;
+    font-size: 0.7rem;
     background-color: var(--mainColor);
     border: 1px solid transparent;
     border-radius: 3px;
@@ -157,7 +158,7 @@ body {
 .todos__filter span {
     text-decoration: none;
     color :var(--textColor);
-    font-size: 1rem;
+    font-size: 0.7rem;
     font-weight: bold;
     text-align: center;
     padding-bottom: 5px;
@@ -171,6 +172,18 @@ body {
 .todos__filter span:hover {
     opacity: 0.8;
     border-bottom: 1px solid var(--textColor);
+}
+
+@media screen and (min-width:567px) {
+
+    .todos__filter span {
+        font-size: 1rem;
+    }
+
+    .todos__controller-clear {
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+    }
 }
 
 /* todos items */
