--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,17 @@ body {
     margin-top: 60px;
     margin-left: auto;
     margin-right: auto;
-    /* box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);  */
-    box-shadow:
-    0px 221px 49px -115px rgb(72 72 72 / 41%)  ;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
+    /* 0px 157px 23px -72px rgba(0, 0, 0, 0.17); */
+
       background-color: rgba(255, 255, 255, 0.15);
     backdrop-filter: blur(8px);
+}
+
+@media  screen and (min-width:576px) {
+    .container {
+        width: 50%;
+    }
 }
 
 .todos {
